trunk/Archive2/ff/006c28df0407c2/output
main.cpp:11:1: error: expected unqualified-id
delete namespace detail;
^
main.cpp:15:10: error: redefinition of 'f'
    void f() {}
         ^
main.cpp:3:10: note: previous definition is here
    void f() {}
         ^
main.cpp:23:1: error: expected unqualified-id
delete namespace detail;
^
3 errors generated.
